--- a/.gitignore
+++ b/.gitignore
@@ -31,11 +31,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env.local
 
 # vercel
 .vercel
-
+.vscode
 # typescript
 *.tsbuildinfo
 next-env.d.ts
