--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.562.0",
     "matter-js": "^0.20.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.2",
     "next": "16.1.1",
     "posthog-js": "^1.310.1",
     "react": "19.2.3",
