--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,14 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env.local
-
+.env
 # vercel
 .vercel
 .vscode
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/lib/generated/prisma
+
+/lib/generated/prisma
