--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "gsap": "^3.13.0",
     "lucide-react": "^0.562.0",
     "matter-js": "^0.20.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.2",
     "next": "16.1.1",
+    "pg": "^8.16.3",
     "posthog-js": "^1.310.1",
+    "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
