fix(date_error):prisma_date_error_fix

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+
+# don't preprend with NEXT_PUBLIC_ to keep it private
+# anything prepended with NEXT_PUBLIC_ will be exposed to the browser
 NEXT_PUBLIC_POSTHOG_KEY=your_posthog_project_api_key
 NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 NEXT_PUBLIC_API_URL=http://localhost:3000
+
+DATABASE_URL=postgresql://eviadmin:evipass@localhost:5432/eviDB
