--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "insert-mock": "./mock-data.ts"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
