--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@neondatabase/serverless": "^1.0.2",
+    "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.562.0",
     "matter-js": "^0.20.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.2",
     "next": "16.1.1",
+    "pg": "^8.16.3",
     "posthog-js": "^1.310.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -27,8 +34,10 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "shadcn": "^3.6.2",
